@@ -1,15 +1,15 @@
 package net.matty.bmbc.datagen;
 
 import net.matty.bmbc.BetterMineBetterCraft;
-import net.matty.bmbc.world.feature.ModConfiguredFeatures;
-import net.matty.bmbc.world.feature.ModPlacedFeatures;
+import net.matty.bmbc.worldgen.feature.ModConfiguredFeatures;
+import net.matty.bmbc.worldgen.feature.ModPlacedFeatures;
 import net.minecraft.core.HolderLookup;
 import net.minecraft.core.RegistrySetBuilder;
 import net.minecraft.core.registries.Registries;
 import net.minecraft.data.PackOutput;
 import net.minecraftforge.common.data.DatapackBuiltinEntriesProvider;
 
-import java.util.Collections;
+import java.util.Set;
 import java.util.concurrent.CompletableFuture;
 
 public class ModWorldGenProvider extends DatapackBuiltinEntriesProvider {
@@ -18,6 +18,6 @@ public class ModWorldGenProvider extends DatapackBuiltinEntriesProvider {
             .add(Registries.PLACED_FEATURE, ModPlacedFeatures::bootstrap);
 
     public ModWorldGenProvider(PackOutput output, CompletableFuture<HolderLookup.Provider> registries) {
-        super(output, registries, BUILDER, Collections.singleton(BetterMineBetterCraft.MOD_ID));
+        super(output, registries, BUILDER, Set.of(BetterMineBetterCraft.MOD_ID)); // if fails do Collections.singleton(BetterMineBetterCraft.MOD_ID));
     }
 }
